--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid container">
     <nav class="navbar bg-light">
       <div class="container">
@@ -22,6 +22,82 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="main_nav">
+
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown has-megamenu">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            data-bs-toggle="dropdown"
+          >
+            Mega menu
+          </a>
+          <div class="dropdown-menu megamenu" role="menu">
+            <div class="row card-row d-flex justify-content-center">
+              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
+                <img
+                  src="{% static 'img/menu.jpg' %}"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body p-0">
+                  <a href="#" class="stretched-link"
+                    ><h5 class="card-title text-center">Anova HP222</h5></a
+                  >
+                </div>
+              </div>
+              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
+                <img
+                  src="{% static 'img/menu.jpg' %}"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body p-0">
+                  <a href="#" class="stretched-link"
+                    ><h5 class="card-title text-center">Anova HP222</h5></a
+                  >
+                </div>
+              </div>
+              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
+                <img
+                  src="{% static 'img/menu.jpg' %}"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body p-0">
+                  <a href="#" class="stretched-link"
+                    ><h5 class="card-title text-center">Anova HP222</h5></a
+                  >
+                </div>
+              </div>
+              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
+                <img
+                  src="{% static 'img/menu.jpg' %}"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body p-0">
+                  <a href="#" class="stretched-link"
+                    ><h5 class="card-title text-center">Anova HP222</h5></a
+                  >
+                </div>
+              </div>
+              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
+                <img
+                  src="{% static 'img/menu.jpg' %}"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body p-0">
+                  <a href="#" class="stretched-link"
+                    ><h5 class="card-title text-center">Anova HP222</h5></a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item active"><a class="nav-link" href="#">Home </a></li>
         <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
