--- a/templates/section.html
+++ b/templates/section.html
@@ -1,37 +1,47 @@
 {% load static %}
 
-<section>
-    <div class="container my-5">
-
-        <div class="row">
-            <div class="col-lg-4 text-center">
-                <div class="card mx-0 py-4 section-card" style="width: 18rem;">
-                    <img src="{% static 'img/menu.jpg' %}" class="card-img-top" alt="...">
-                    <div class="card-body py-1">
-                      <h5 class="card-title text-center">Anova HM221</h5>
-                      <a href="#" class="btn btn-outline-primary stretched-link card-link">Learn More+</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-lg-4 text-center">
-                <div class="card mx-0 my-1 py-4 section-card" style="width: 18rem;">
-                    <img src="{% static 'img/menu.jpg' %}" class="card-img-top" alt="...">
-                    <div class="card-body py-1">
-                      <h5 class="card-title text-center">Anova HM221</h5>
-                      <a href="#" class="btn btn-outline-primary stretched-link card-link">Learn More+</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-lg-4 text-center">
-                <div class="card mx-0 my-1 py-4 section-card" style="width: 18rem;">
-                    <img src="{% static 'img/menu.jpg' %}" class="card-img-top" alt="...">
-                    <div class="card-body py-1">
-                      <h5 class="card-title">Anova HM221</h5>
-                      <a href="#" class="btn btn-outline-primary stretched-link card-link">Learn More+</a>
-                    </div>
-                  </div>
-            </div>
+<div class="container my-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card section-card">
+        <img
+          src="{% static 'img/watch.jpg' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body text-center">
+          <h5 class="card-title">Alice Liddel</h5>
+          <a href="#" class="btn btn-primary stretched-link">View Profile</a>
         </div>
-       
+      </div>
     </div>
-</section>
+
+    <div class="col-md-4">
+      <div class="card section-card">
+        <img
+          src="{% static 'img/watch.jpg' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body text-center">
+          <h5 class="card-title">Alice Liddel</h5>
+          <a href="#" class="btn btn-primary stretched-link">View Profile</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card section-card">
+        <img
+          src="{% static 'img/watch.jpg' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body text-center">
+          <h5 class="card-title">Alice Liddel</h5>
+          <a href="#" class="btn btn-primary stretched-link">View Profile</a>
+        </div>
+      </div>
+    </div>
+    <div></div>
+  </div>
+</div>
