--- a/templates/audio-banner-section.html
+++ b/templates/audio-banner-section.html
@@ -2,7 +2,7 @@
 <div class="container my-5">
     <div class="container">
         <div class="row">
-            <h2 class="banner-title fade-up"><span class="mx-1">{{title}}</span></h2>
+            <h2 class="banner-title reveal fade-left"><span class="mx-1">{{title}}</span></h2>
             
         </div>
         
