--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %} {{category}}
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid container">
     <nav class="navbar bg-light">
@@ -22,164 +22,47 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="main_nav">
-
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown has-megamenu">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            data-bs-toggle="dropdown"
-          >
-            Mega menu
-          </a>
-          <div class="dropdown-menu megamenu" role="menu">
-            <div class="row card-row d-flex justify-content-center">
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-      </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item active"><a class="nav-link" href="#">Home </a></li>
-        <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
-        <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>
-        <li class="nav-item dropdown-btn">
-          <a class="nav-link" href="#"> Menu item </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown has-megamenu">
+        {% for cat in categories %}
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
+            id="navbarDropdown"
+            role="button"
             data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
-            Mega menu
+            {{cat.title}}
           </a>
-          <div class="dropdown-menu megamenu" role="menu">
-            <div class="row card-row d-flex justify-content-center">
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
+
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="container">
+              <div class="row m-auto">
+                {% for prod in cat.product_set.all %}
+                <div class="col-md-2 mx-auto">
+                  <div class="container menu">
+                    <a href="#">
+                      <img
+                        src="{{prod.image.url}}"
+                        class="mx-auto d-block"
+                        alt="..."
+                        width="100"
+                        height="100"
+                      />
+                      <h6 class="text-center my-2">{{prod.name}}</h6>
+                    </a>
+                  </div>
                 </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
-              </div>
-              <div class="card mx-2 my-1" style="width: 12rem; height: 18rem">
-                <img
-                  src="{% static 'img/menu.jpg' %}"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body p-0">
-                  <a href="#" class="stretched-link"
-                    ><h5 class="card-title text-center">Anova HP222</h5></a
-                  >
-                </div>
+                {% endfor %}
               </div>
             </div>
-          </div>
+          </ul>
         </li>
+        {% endfor %}
+        <li class="nav-item"><a class="nav-link" href="#">About Us </a></li>
+        <li class="nav-item"><a class="nav-link" href="#"> News </a></li>
+        <li class="nav-item"><a class="nav-link" href="#"> Support </a></li>
       </ul>
     </div>
   </div>
